# smolvm

./: .gitattributes  .gitignore  Cargo.toml  Licenses.md  README.md  build.rs
.github/workflows/: ci.yml
crates/smolvm-agent/: Cargo.toml
crates/smolvm-agent/src/: container.rs  crun.rs  main.rs  process.rs  storage.rs
crates/smolvm-helper/: Cargo.toml
crates/smolvm-helper/src/: main.rs  storage.rs  vsock.rs
crates/smolvm-pack/: Cargo.toml
crates/smolvm-pack/src/: detect.rs  extract.rs  format.rs  lib.rs  macho.rs  packer.rs
crates/smolvm-protocol/: Cargo.toml
crates/smolvm-protocol/src/: lib.rs
crates/smolvm-stub/: Cargo.toml  build.rs
crates/smolvm-stub/src/: extract.rs  launch.rs  main.rs  section.rs
lib/: libkrun.dylib
scripts/: build-agent-rootfs.sh  build-dist.sh  build-helper-rootfs.sh  install-local.sh  install.sh  rebuild-agent.sh
src/: config.rs  db.rs  error.rs  lib.rs  log_rotation.rs  main.rs  mount.rs  network.rs  process.rs  protocol.rs  registry.rs  storage.rs
src/agent/: client.rs  launcher.rs  launcher_dynamic.rs  manager.rs  mod.rs  terminal.rs
src/api/: error.rs  mod.rs  state.rs  supervisor.rs  types.rs
src/api/handlers/: containers.rs  exec.rs  images.rs  microvms.rs  sandboxes.rs
src/cli/: config.rs  container.rs  create.rs  delete.rs  exec.rs  list.rs  microvm.rs  mod.rs  openapi.rs  pack.rs  parsers.rs  run.rs  run_packed.rs  runpack.rs  sandbox.rs  serve.rs  start.rs  stop.rs  vm_common.rs
src/helper/: client.rs  launcher.rs  manager.rs  mod.rs
src/platform/: linux.rs  macos.rs  traits.rs
src/rootfs/: buildah.rs  mod.rs
src/vm/: config.rs  mod.rs  rosetta.rs  state.rs
src/vm/backend/: libkrun.rs  mod.rs
tests/: run_all.sh  test_api.sh  test_cli.sh  test_container.sh  test_microvm.sh  test_pack.sh  test_sandbox.sh
