[workspace]
members = [".", "crates/smolvm-agent", "crates/smolvm-protocol"]
resolver = "2"

[package]
name = "smolvm"
version = "0.1.0"
edition = "2021"
description = "OCI-native microVM runtime"
license = "Apache-2.0"
repository = "https://github.com/smolvm/smolvm"
keywords = ["microvm", "container", "virtualization"]
categories = ["virtualization", "command-line-utilities"]

[lib]
name = "smolvm"
path = "src/lib.rs"

[[bin]]
name = "smolvm"
path = "src/main.rs"

[[bin]]
name = "test_disk_root"
path = "src/bin/test_disk_root.rs"

[dependencies]
smolvm-protocol = { path = "crates/smolvm-protocol" }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
confy = "0.6"
libc = "0.2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
humantime = "2"

# HTTP API server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
tokio-stream = "0.1"
parking_lot = "0.12"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"
smolvm-protocol = { path = "crates/smolvm-protocol" }
regex = "1"

[build-dependencies]
pkg-config = "0.3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
